corretto yaml, da sistemare getPhoto, carica b64 da backend da fare
